--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 <div class="color-box"></div>
 </div>
 <div class="form-group">
-<label for="digits-color">Digits color</label>
-<input type="text" id="digits-color">
+<label for="bgofdoc">Background Color of a Document</label>
+<input type="text" id="bgofdoc">
 <div class="color-box"></div>
 </div>
 <div class="form-group">
@@ -96,7 +96,6 @@
 <label for="responsive">Responsive (auto-adjustable width)</label>
 </div>
 </div>
-<button id="submit">SUBMIT</button>
 </form>
 </div>
 </div>
@@ -118,3 +117,4 @@ allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade " b
 <script src="javascirpt.js"></script>
 </body>
 </html>
+
